--- a/tamplate.html
+++ b/tamplate.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>users informsation data load</title>
     <link rel="stylesheet" href="tamplate.css">
-    <link rel="shortcut icon" href="fave.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./user-data/fave.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body style="background-color: rgb(200, 200, 200)">
